# django-admin-logs-viewer

./: .bumpversion.toml  .gitignore  404.html  README.md  index.html  manage.py  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml  upload_pypi.yml
assets/css/: styles.caa4d2c7.css
assets/js/: 0e384e19.0926abc1.js  0e384e19.3395ed1f.js  0e384e19.6b569f84.js  1464e458.c885ca78.js  14eb3368.d7f5cadf.js  17896441.40642615.js  520429a5.2b401aa5.js  520429a5.686cf266.js  520429a5.c2755308.js  520429a5.e5acffb3.js  520429a5.e5ed5375.js  520429a5.ff3c4094.js  5ab0508b.288f133e.js  64ce9d20.20ac6a75.js  64ce9d20.235eea8c.js  64ce9d20.c11c93a6.js  64ce9d20.df6b2858.js  64ce9d20.e1981eb1.js  64ce9d20.f691d788.js  7628a251.567b5fd6.js  7628a251.6a030ebb.js  7628a251.73b885ed.js  7628a251.83882c47.js  7628a251.c196a65f.js  77a28af1.0b06bf33.js  77a28af1.0f259b08.js  77a28af1.91c906c6.js  82827712.78b26437.js  a4ac8993.0bc5fbf9.js  a4ac8993.2815dd4f.js  a4ac8993.35ae220b.js  a4ac8993.ceabe0ed.js  a4ac8993.d34dd772.js  adb558bc.1ccb9f0e.js  adb558bc.a1537934.js  adb558bc.c8688d91.js  c4f5d8e4.3307640f.js  c4f5d8e4.6d66d1be.js  c4f5d8e4.8af3ed75.js  fcbd46e8.7b80f854.js  (+15 more)
django_admin_logs_viewer/: apps.py  asgi.py  context_processors.py  defaults.py  settings.py  urls.py  wsgi.py
django_admin_logs_viewer/views/: logs_view.py  logs_viewer.py  parser.py  utils.py
docs/contributions/: index.html
docs/description/: index.html
docs/intro/: index.html
documentation/: docusaurus.config.js  package-lock.json
documentation/docs/: description.md  intro.md
(+23 files in other folders)
