[build-system]
requires = ["setuptools>=69.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-logs-viewer"
version = "0.1"
dependencies = [
    "Django>=5.0"
]
description = "Viewer for Django admin logs"
readme = "README.md"
requires-python = ">= 3.10"
authors = [
    {name = "Aleksander Wojsz", email = "wojszalek@gmail.com"},
]
license = "MIT"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://www.example.com/"

[tool.setuptools.packages.find]
exclude = ["/logs"]
